--- a/src/main/resources/vm/vue/index.vue.vm
+++ b/src/main/resources/vm/vue/index.vue.vm
@@ -449,8 +449,8 @@ export default {
 #end
 #end
       list${BusinessName}(this.queryParams).then(response => {
-        this.${businessName}List = response.rows;
-        this.total = response.total;
+        this.${businessName}List = response.data.list;
+        this.total = response.data.total;
         this.loading = false;
       });
     },
