--- a/src/main/resources/vm/java/serviceImpl.java.vm
+++ b/src/main/resources/vm/java/serviceImpl.java.vm
@@ -9,8 +9,6 @@ import com.hawk.framework.base.BaseServiceImpl;
 #end
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import ${packageName}.domain.bo.${ClassName}Bo;
-import ${packageName}.domain.vo.${ClassName}Vo;
 import ${packageName}.domain.${ClassName};
 import ${packageName}.mapper.${ClassName}Mapper;
 import ${packageName}.service.I${ClassName}Service;
@@ -31,22 +29,15 @@ public class ${ClassName}ServiceImpl extends BaseServiceImpl<${ClassName}> imple
 
     private final ${ClassName}Mapper baseMapper;
 
-    /**
-     * 查询${functionName}
-     */
-    @Override
-    public ${ClassName}Vo queryById(${pkColumn.javaType} ${pkColumn.javaField}){
-        return baseMapper.selectVoById(${pkColumn.javaField});
-    }
 
 #if($table.crud || $table.sub)
     /**
      * 查询${functionName}列表
      */
     @Override
-    public PageInfo<${ClassName}Vo> queryPageList(${ClassName}Bo bo, PageQuery pageQuery) {
+    public PageInfo<${ClassName}> queryPageList(${ClassName} entity, int pageNum, int pageSize) {
         String whereCause = buildQueryExample(bo);
-        PageInfo<${ClassName}Vo> result = baseMapper.selectVoPage(whereCause);
+        PageInfo<${ClassName}> result = baseMapper.selectVoPage(whereCause);
         return new PageInfo<>(list);
     }
 #end
@@ -55,12 +46,12 @@ public class ${ClassName}ServiceImpl extends BaseServiceImpl<${ClassName}> imple
      * 查询${functionName}列表
      */
     @Override
-    public List<${ClassName}Vo> queryList(${ClassName}Bo bo) {
+    public List<${ClassName}> queryList(${ClassName} entity) {
         String whereCause = buildQueryExample(sysUser);
         return baseMapper.selectVoList(lqw);
     }
 
-    private String buildQueryExample(${ClassName}Bo bo) {
+    private String buildQueryExample(${ClassName} entity) {
         Map<String, Object> params = bo.getParams();
         Example example = new Example(${ClassName}.class);
         CriteriaUtils.builder(example.createCriteria())
@@ -88,46 +79,23 @@ public class ${ClassName}ServiceImpl extends BaseServiceImpl<${ClassName}> imple
                 return lqw;
     }
 
-    /**
-     * 新增${functionName}
-     */
     @Override
-    public Boolean insertByBo(${ClassName}Bo bo) {
-        ${ClassName} add = BeanUtil.toBean(bo, ${ClassName}.class);
-        validEntityBeforeSave(add);
-        boolean flag = baseMapper.insert(add) > 0;
-#set($pk=$pkColumn.javaField.substring(0,1).toUpperCase() + ${pkColumn.javaField.substring(1)})
-        if (flag) {
-            bo.set$pk(add.get$pk());
-        }
-        return flag;
+    public void deleteBatch(List<Long> ids) {
+        baseMapper.deleteBatch(ids);
     }
 
-    /**
-     * 修改${functionName}
-     */
     @Override
-    public Boolean updateByBo(${ClassName}Bo bo) {
-        ${ClassName} update = BeanUtil.toBean(bo, ${ClassName}.class);
-        validEntityBeforeSave(update);
-        return baseMapper.updateById(update) > 0;
+    public int updateBatchSelective(List<${ClassName} > list) {
+        return baseMapper.updateBatchSelective(list);
     }
 
-    /**
-     * 保存前的数据校验
-     */
-    private void validEntityBeforeSave(${ClassName} entity){
-        //TODO 做一些数据校验,如唯一约束
+    @Override
+    public int updateBatchSelectiveLimit(List<${ClassName} > list, int size) {
+        return baseMapper.updateBatchSelectiveLimit(list,size);
     }
 
-    /**
-     * 批量删除${functionName}
-     */
     @Override
-    public Boolean deleteWithValidByIds(Collection<${pkColumn.javaType}> ids, Boolean isValid) {
-        if(isValid){
-            //TODO 做一些业务上的校验,判断是否需要校验
-        }
-        return baseMapper.deleteBatchIds(ids) > 0;
+    public int insertAllFieldBatch(List<${ClassName} > list) {
+        return baseMapper.insertAllFieldBatch(list);
     }
 }
